# reaspeech-lite

./: .gitignore  CMakeLists.txt
.github/workflows/: build_and_test.yml
assets/: index.html
packaging/: installer.iss
python/: README.md  build_executable.bat  build_executable.sh  parakeet_transcribe.py  parakeet_transcribe.spec
source/: Config.h
source/ara/: ReaSpeechLiteAudioSource.h  ReaSpeechLiteDocumentController.h
source/asr/: ASREngine.h  ASRThreadPoolJob.h  OnnxPythonEngine.h  ParakeetEngine.cpp  ParakeetEngine.h  ParakeetEngineAPI.h  ParakeetEngineDLL.cpp  ParakeetPythonEngine.h
source/reaper/: ReaperProxy.h
source/ts/config/: build.js
source/ts/src/: ARA.ts  App.ts  Native.ts  TranscriptGrid.ts
source/ts/tests/: App.test.ts  AudioSourceGrid.test.ts  TranscriptGrid.test.ts
source/ts/tests/mocks/: MockNative.ts
source/types/: MarkerType.h
source/ui/: NativeFunctions.h
source/utils/: ResamplingExporter.h
